--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-NODE_ENV=develop
+NODE_ENV=production
 DATABASE_URL=postgresql://gerenciador_tarefas_user:0FB05sE0uQzotrcLJLEiKoPeIBQowv9Q@dpg-d0jbqimmcj7s73fr2ui0-a.oregon-postgres.render.com/gerenciador_tarefas_o7o7
-SECRET=cl1ffburt0n
+SECRET=123456
